[gd_scene load_steps=12 format=3 uid="uid://bo5rada7dj8g7"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_7op32"]
[ext_resource type="Texture2D" uid="uid://bf28ujoj8tear" path="res://images/tank/track1.png" id="1_fqwq2"]
[ext_resource type="Texture2D" uid="uid://88i058vi1y04" path="res://images/tank/b2.png" id="2_sn6bl"]
[ext_resource type="Texture2D" uid="uid://u0xyn205ng32" path="res://images/tank/b1.png" id="3_1iqk1"]
[ext_resource type="Texture2D" uid="uid://mh8wsnm5bt8w" path="res://images/tank/track2.png" id="3_5vwq3"]
[ext_resource type="Texture2D" uid="uid://sfekksswxqan" path="res://images/tank/gun1.png" id="4_gtm2m"]
[ext_resource type="Texture2D" uid="uid://bnpm5aqg232k4" path="res://images/tank/connector.png" id="5_uiel3"]
[ext_resource type="AudioStream" uid="uid://bikoip6rg8pyr" path="res://snd/mixkit-short-explosion-1694.wav" id="8_bls0n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cdal6"]
atlas = ExtResource("1_fqwq2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_6x4i7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdal6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_fqwq2")
}, {
"duration": 1.0,
"texture": ExtResource("3_5vwq3")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jgxjd"]
size = Vector2(111, 110)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 4
script = ExtResource("1_7op32")

[node name="Track1" type="AnimatedSprite2D" parent="."]
position = Vector2(-36, 4)
sprite_frames = SubResource("SpriteFrames_6x4i7")
animation = &"run"
frame_progress = 0.649622

[node name="Track2" type="AnimatedSprite2D" parent="."]
position = Vector2(34, 4)
sprite_frames = SubResource("SpriteFrames_6x4i7")
animation = &"run"
frame_progress = 0.633988

[node name="B2" type="Sprite2D" parent="."]
texture = ExtResource("2_sn6bl")

[node name="top" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="B1" type="Sprite2D" parent="top"]
texture = ExtResource("3_1iqk1")

[node name="Gun1" type="Sprite2D" parent="top"]
position = Vector2(-1, -86)
texture = ExtResource("4_gtm2m")

[node name="Connector" type="Sprite2D" parent="top"]
position = Vector2(0, -42)
texture = ExtResource("5_uiel3")

[node name="BulletSpawnPoint" type="Marker2D" parent="top"]
unique_name_in_owner = true
position = Vector2(0, -120)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Player"]]
position = Vector2(-1.5, 2)
shape = SubResource("RectangleShape2D_jgxjd")

[node name="ShootSnd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_bls0n")
